@@ -3156,7 +3156,6 @@ stream_end_reason_to_string(int reason)
     case END_STREAM_REASON_TORPROTOCOL: return "TORPROTOCOL";
     case END_STREAM_REASON_NOTDIRECTORY: return "NOTDIRECTORY";
 
-    case END_STREAM_REASON_ALREADY_SOCKS_REPLIED: return "INTERNAL";
     case END_STREAM_REASON_CANT_ATTACH: return "CANT_ATTACH";
     case END_STREAM_REASON_NET_UNREACHABLE: return "NET_UNREACHABLE";
     case END_STREAM_REASON_SOCKSPROTOCOL: return "SOCKS_PROTOCOL";
